home page and skateboarding page ammends

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
     color: #faec1b;
     width: 543px;
     padding: 0px 0px 7px 7px;
-    margin-left: 15px;
+    margin-left: 12px;
     font-weight: bold;
-    font-size: 26px;
+    font-size: 23px;
     margin-top: 0px;
-    letter-spacing: 3.5px;
+    letter-spacing: 3.2px;
   }
 
 
@@ -243,7 +243,7 @@
   }
 
   #hero-intro-paragraph p{
-   font-size: 18px
+   font-size: 16px
   }
 
 }
@@ -317,7 +317,7 @@
   <div id="hero-intro-paragraph">
     <h1 id="top-name">Rachael</h1>
     <h1>Sherlock</h1>
-    <p>Film maker & aspiring TV director</p>
+    <p>Senior Studio Technician & Film Maker</p>
   </div>
 
 </div>
