--- a/skateboarding.html
+++ b/skateboarding.html
@@ -404,7 +404,7 @@ height: 100%;
   <h2>Skate Edit 2018</h2>
 
  <div style="width: 100%;">
-  <video  id="big-video" controls>
+  <video id="big-video" poster="images/skateboarding/skate-edit-cover.jpg" controls>
     <source src="images/skateboarding/Skateboarding-page-Big-vid.mp4" type="video/mp4">
   </video>
 </div>
