meta tag updates and menu link ammends

--- a/about-me.html
+++ b/about-me.html
@@ -3,7 +3,8 @@
 <html>
 
 <head>
-
+<title>About Me - Rachael Sherlock</title>
+<meta name="description" content="About me, contact information and biography">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -209,19 +210,17 @@ body{
 
     <a href="index.html" id="home-button">Rachael Sherlock</a>
 
-    	<div id="mobile-menu-icon">
-
+    <div id="mobile-menu-icon">
   		<div></div>
   		<div></div>
   		<div></div>
   	</div>
 
      <ul id="button-list">
-       <a href="film-tv_v5.html"><li id="button-one">Film & TV</li></a>
-       <a href="skateboarding.html"><li id="button-two">Skateboarding</li></a>
-       <a href="about-me_v2.html"><li id="button-three" class="active">About Me</li></a>
+       <li id="button-one"><a href="film-tv.html">Film & TV</a></li>
+       <li id="button-two"><a href="skateboarding.html">Skateboarding</a></li>
+       <li id="button-three" class="active"><a href="about-me.html">About Me</a></li>
      </ul>
-
 
   </div>
 
@@ -246,27 +245,24 @@ body{
   </div>
 
   <div id="am-text-wrapper">
-
     <p class="quote">Described by BAFTA winning Patrick Titley as 	&lsquo;cool&rsquo;. </p>
+     <div id="body-copy">
+        <p id="first-para">Based in North London I have been working in television for 6 years on a range of different productions. My day to day work at ITV varies massively from assisting Sound, Lighting, Scenic and Camera departments. Ultimately my career ambitions would be to direct live events, and I’m passionate about working on independent freelance projects to develop my skills.</p>
 
+        <p>I first got into film when I joined a club at my local youth centre, attending workshops and gaining a place with TVYP at Bristol Endemol Studios. During my University years I created <a href="https://ystv.co.uk/watch/thesoundlab/">The Sound Lab</a> for YSTV and was part of the winning team that won Best Broadcaster at the National Student Television Awards 2012.</p>
 
- <div id="body-copy">
-    <p id="first-para">Based in North London I have been working in television for 6 years on a range of different productions. My day to day work at ITV varies massively from assisting Sound, Lighting, Scenic and Camera departments. Ultimately my career ambitions would be to direct live events, and I’m passionate about working on independent freelance projects to develop my skills.</p>
+        <p class="quote">During the London 2012 Paralympic Games, I worked with for <a href="https://www.doneanddusted.com/">Done & Dusted</a> at the opening and closing ceremonies.</p>
 
-    <p>I first got into film when I joined a club at my local youth centre, attending workshops and gaining a place with TVYP at Bristol Endemol Studios. During my University years I created <a href="https://ystv.co.uk/watch/thesoundlab/">The Sound Lab</a> for YSTV and was part of the winning team that won Best Broadcaster at the National Student Television Awards 2012.</p>
+        <p>I joined Roll to Record at Elstree Studios and did my training to become a grade 5 operator for Big Brother, whilst at the same time freelancing in the ITV Breakfast Green Room. I then moved across to ITV completely to become a Studio Technician and have stayed with them throughout several changes, where I am now a Senior Studio Technician helping to oversee a team of multiskilled assistants. </p>
 
-    <p class="quote">During the London 2012 Paralympic Games, I worked with for <a href="https://www.doneanddusted.com/">Done & Dusted</a> at the opening and closing ceremonies.</p>
+          <div id="info-box">
+            <p>For small projects and freelance work I have my own audio visual equipment allowing me to be self-sufficient. I use a zoom H4n recorder with a radio mic to ensure the highest possible sound production values when working on smaller productions instead of relying on internal camera mics or small shotgun style mics.</p>
 
-    <p>I joined Roll to Record at Elstree Studios and did my training to become a grade 5 operator for Big Brother, whilst at the same time freelancing in the ITV Breakfast Green Room. I then moved across to ITV completely to become a Studio Technician and have stayed with them throughout several changes, where I am now a Senior Studio Technician helping to oversee a team of multiskilled assistants. </p>
+            <p>I pride myself on having great interpersonal skills, useful for conducting interviews and dealing with a range of talent. I’m able to adapt daily depending on my role and team, and can also be a trusted self-shooter.</p>
+          </div>
 
-  <div id="info-box">
-    <p>For small projects and freelance work I have my own audio visual equipment allowing me to be self-sufficient. I use a zoom H4n recorder with a radio mic to ensure the highest possible sound production values when working on smaller productions instead of relying on internal camera mics or small shotgun style mics.</p>
-
-    <p>I pride myself on having great interpersonal skills, useful for conducting interviews and dealing with a range of talent. I’m able to adapt daily depending on my role and team, and can also be a trusted self-shooter.</p>
+      </div>
   </div>
-
-  </div>
-
 </div>
 
 <div id="footer">
@@ -279,7 +275,7 @@ body{
     </div>
 </a>
 
-<a href="https://www.instagram.com/rachael_sherlock/">
+<a href="https://www.instagram.com/rachael_sherlock/" target="_blank">
      <div id="instagram-icon">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         	 viewBox="0 0 56.7 56.7" enable-background="new 0 0 56.7 56.7" xml:space="preserve">
