--- a/film-tv.html
+++ b/film-tv.html
@@ -3,7 +3,8 @@
 <html>
 
 <head>
-
+<title>Film & TV - Rachael Sherlock</title>
+<meta name="description" content="Portfolio containing examples of work and completed projects">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -310,9 +311,9 @@ body{
   	</div>
 
      <ul id="button-list">
-       <a href="film-tv_v5.html"><li id="button-one" class="active">Film & TV</li></a>
-       <a href="skateboarding.html"><li id="button-two">Skateboarding</li></a>
-       <a href="about-me_v2.html"><li id="button-three">About Me</li></a>
+       <li id="button-one" class="active"><a href="film-tv.html">Film & TV</a></li>
+       <li id="button-two"><a href="skateboarding.html">Skateboarding</a></li>
+       <li id="button-three"><a href="about-me.html">About Me</a></li>
      </ul>
 
 
@@ -642,7 +643,7 @@ body{
     </div>
 </a>
 
-<a href="https://www.instagram.com/rachael_sherlock/">
+<a href="https://www.instagram.com/rachael_sherlock/" target="_blank">
      <div id="instagram-icon">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         	 viewBox="0 0 56.7 56.7" enable-background="new 0 0 56.7 56.7" xml:space="preserve">
