--- a/skateboarding.html
+++ b/skateboarding.html
@@ -3,7 +3,8 @@
 <html>
 
 <head>
-
+<title>Skateboarding - Rachael Sherlock</title>
+<meta name="description" content="Skateboarding projects and work within the sport">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 
@@ -317,9 +318,9 @@ height: 100%;
 	</div>
 
    <ul id="button-list">
-     <a href="film-tv_v5.html"><li id="button-one">Film & TV</li></a>
-     <a href="skateboarding.html"><li id="button-two" class="active">Skateboarding</li></a>
-     <a href="about-me_v2.html"><li id="button-three">About Me</li></a>
+     <li id="button-one"><a href="film-tv.html">Film & TV</a></li>
+     <li id="button-two" class="active"><a href="skateboarding.html">Skateboarding</a></li>
+     <li id="button-three"><a href="about-me.html">About Me</a></li>
    </ul>
 
 
@@ -457,7 +458,7 @@ height: 100%;
     </div>
 </a>
 
-<a href="https://www.instagram.com/rachael_sherlock/">
+<a href="https://www.instagram.com/rachael_sherlock/" target="_blank">
      <div id="instagram-icon">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         	 viewBox="0 0 56.7 56.7" enable-background="new 0 0 56.7 56.7" xml:space="preserve">
