--- a/index.html
+++ b/index.html
@@ -3,287 +3,21 @@
 <html>
 
 <head>
-<title>Rachael Sherlock - Homepage</title>
-<meta name="description" content="The professional website of studio technician & film maker Rachael Sherlock">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta charset="UTF-8">
+  <title>Rachael Sherlock - Homepage</title>
+  <meta name="description" content="The professional website of studio technician & film maker Rachael Sherlock">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
 
-<link rel="stylesheet" href="menu-styling.css">
-<link rel="stylesheet" href="font-styling.css">
-<link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="css/menu-styling.css">
+  <link rel="stylesheet" href="css/font-styling.css">
+  <link rel="stylesheet" href="css/footer.css">
 
+  <link rel="stylesheet" href="css/main-css.min.css">
 
-
-<style>
-
-    body{
-      margin: 0px;
-    }
-
-
-/* CTA Styling */
-
-#cta{
-    padding: 10px 1px;
-    background-color: #38a39a;
-    width: 149px;
-    margin: auto;
-    margin-bottom: 20px;
-    color: #ffffff;
-    border-radius: 5px;
-    box-shadow: 3px 3px #faec1b;
-}
-
-#cta:hover {
-  background-color: #549c96b5;
-}
-
-#cta:active {
-  transform: translateY(4px);
-}
-  /* Hero Slice */
-
-    #main-hero-slice{
-      width: 100%;
-      height: 100vh;
-      position: relative;
-      min-height: 400px;
-      overflow: hidden;
-    }
-
-    #hero-intro-paragraph {
-      position: absolute;
-      top: 28%;
-      left: 12%;
-      width: 500px;
-      border-radius: 2px;
-    }
-
-    #hero-intro-paragraph h1{
-      margin: 16px 0px 0px 13px;
-      font-weight: 900;
-      font-size: 95px;
-      color: #38a39a;
-      text-transform: uppercase;
-      letter-spacing: 5px;
-      text-shadow:
-      -1px -1px 0 #000,
-      1px -1px 0 #000,
-      -1px 1px 0 #000,
-      1px 1px 0 #000;
-    }
-
-    h1#top-name{
-    margin-bottom: -38px;
-    letter-spacing: 14.5px;
-    }
-
-  #hero-intro-paragraph p{
-    color: #faec1b;
-    width: 543px;
-    padding: 0px 0px 7px 7px;
-    margin-left: 12px;
-    font-weight: bold;
-    font-size: 23px;
-    margin-top: 0px;
-    letter-spacing: 3.2px;
-  }
-
-
-  .fullscreen-bg__video {
-    position: relative;
-    width: 100%;
-    height: auto;
-    z-index: -100;
-}
-
- /* Video Resizing */
-
-
-@media (min-aspect-ratio: 16/9) {
-  .fullscreen-bg__video {
-    width: 100%;
-    height: auto;  /*actually taller than viewport*/
-  }
-}
-@media (max-aspect-ratio: 16/9) {
-  .fullscreen-bg__video {
-    width: auto; /* actually wider than viewport */
-    height: 100%;
-  }
-}
-
-
-
-  /* Body Slices */
-
-  .slice {
-    width: 100%;
-    height: auto;
-  }
-
-
-  .content-holder{
-    margin: auto;
-    }
-
-
-/* Slice One Content */
-
-#slice-one-text{
-  width: 470px;
-  margin: auto;
-  text-align: center;
-  line-height: 32px;
-  margin-bottom: 40px;
-}
-
-  #slice-one h2{
-    text-align: center;
-    margin-top: 40px;
-  }
-
-
-/* Slice Two Content */
-
-  #slice-two{
-    height: auto;
-    border-top: 1px solid #b6afaf;
-    }
-
-#slice-two-text{
-  width: 500px;
-  margin: auto;
-  text-align: center;
-  line-height: 32px;
-  margin-bottom: 40px;
-}
-
-  #slice-two h2{
-    text-align: center;
-    margin-top: 40px;
-  }
-
-
-/* Slice Two Gallery Styling */
-
-  #hp-gallery-container{
-  	display: flex;
-  	flex-direction: row;
-  	flex-wrap: wrap;
-    width: 80%;
-    margin: auto;
-    margin-bottom: 40px;
-  }
-
-  .hp-gallery-item {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: 24%;
-    height: auto;
-    margin: 1%;
-  }
-
-  .hp-gallery-item img{
-    width: 100%;
-    height: auto;
-  }
-
-  @media only screen and (max-width: 850px) {
-    .hp-gallery-item {
-      flex-basis:40%;
-    }
-
-    #hp-gallery-container{
-      width: 90%;
-    }
-
- }
-
-    @media only screen and (max-width: 480px) {
-      .hp-gallery-item {
-        flex-basis:55%;
-      }
-  }
-
-
-/* Homepage Text Mobile Resizing */
-
-
-@media only screen and (max-height: 355px) {
-  #hero-intro-paragraph{
-    top: 10%;
-  }
-}
-
-@media only screen and (max-width: 640px) {
-  #hero-intro-paragraph{
-    left: 0;
-    right: 0;
-    margin: auto;
-  }
-
-  #hero-intro-paragraph h1{
-    margin-left: 0px;
-  }
-
-  #hero-intro-paragraph p{
-    padding-left:0px;
-    margin-left: 0px;
-  }
-}
-
-
-@media only screen and (max-width: 545px) {
-
-  #hero-intro-paragraph{
-    width: 390px;
-  }
-  #hero-intro-paragraph h1{
-    font-size: 68px;
-  }
-
-  #hero-intro-paragraph p{
-   font-size: 16px
-  }
-
-}
-
-
-@media only screen and (max-width: 510px) {
-  #slice-one-text {
-    width: unset;
-    padding: 0px 15px;
-  }
-}
-
-@media only screen and (max-width: 400px) {
-  #hero-intro-paragraph{
-    width: 287px;
-  }
-  #hero-intro-paragraph h1{
-    font-size: 50px;
-  }
-
-  h1#top-name {
-    margin-bottom: -30px;
-    letter-spacing: 11.5px;
-  }
-
-  #hero-intro-paragraph p{
-   font-size: 20px;
-   text-align: center;
-   width: unset;
-  }
-}
-
-  </style>
 </head>
 
 
-<body>
-
-
+<body id="index">
 
 
 <div id="main-menu">
