--- a/about-me.html
+++ b/about-me.html
@@ -3,208 +3,22 @@
 <html>
 
 <head>
-<title>About Me - Rachael Sherlock</title>
-<meta name="description" content="About me, contact information and biography">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta charset="UTF-8">
+  <title>About Me - Rachael Sherlock</title>
+  <meta name="description" content="About me, contact information and biography">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
 
-<link rel="stylesheet" href="menu-styling.css">
-<link rel="stylesheet" href="font-styling.css">
-<link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="css/menu-styling.css">
+  <link rel="stylesheet" href="css/font-styling.css">
+  <link rel="stylesheet" href="css/footer.css">
 
-<style>
-
-body{
-  background-color: #444444;
-  margin: 0px;
-  }
-
-#main-menu {
-  position: static;
-  }
-
-/* Image Banner */
-
-#full-width-banner{
-  margin-top: 20px;
-  width: 100%;
-  height: 150px;
-  background-image: url("images/about-me/Header-adjusted.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-
-/* Title Banner */
-
-#title-banner{
-  text-align: center;
-  width: 65%;
-  margin: auto;
-  background-color: #38a39a;
-  position: absolute;
-  left: 0;
-  top: 164px;
-  right: 0;
-  color: #ffffff;
-}
-
-
-#title-banner{
-  text-transform: uppercase;
-  letter-spacing: 5px;
-}
-
-/* Contact Styling */
-
-#contact-wrapper{
-  text-align: center;
-  position: static;
-  padding-top: 45px;
-}
-
-#contact-wrapper a p{
-  color: black;
-  letter-spacing: 2px;
-  margin: auto;
-  padding-bottom: 4px;
-  width: 134px;
-  border-bottom: 1px solid black;
-  font-weight: bold;
-}
-
-#contact-wrapper a p:hover{
-  -webkit-transform: scale(1.2);
-  -ms-transform: scale(1.2);
-  transform: scale(1.2);
-}
-/* Body Content */
-
-#am-content-wrapper{
-  background-color: #ffffff;
-}
-
-#am-text-wrapper, #am-img-wrapper{
-  display: inline-block;
-}
-
-#am-img-wrapper{
-  width: 45%;
-  float: left;
-}
-
-#am-img-wrapper img{
-  width: 82%;
-  height: auto;
-  max-height: 548px;
-  max-width: 410px;
-  margin: 30px auto;
-  display: block;
-
-}
-
-#am-text-wrapper{
-  width: 55%;
-  margin-bottom: 70px;
-  max-width: 870px;
-}
-
-#am-text-wrapper p.quote{
-  margin: auto;
-  text-align: center;
-  font-weight: bold;
-  font-size: 20px;
-  letter-spacing: 1px;
-  width: 290px;
-  padding-top: 40px;
-}
-
-#am-text-wrapper #body-copy p.quote{
-  width: 428px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-#am-text-wrapper p#first-para{
-      background-color: #c1dcda;
-      border-radius: 6px;
-      padding: 15px 11px;
-      margin-top: 20px;
-      font-weight: bold;
-      letter-spacing: 1px;
-      margin-bottom: 15px;
-}
-
-#am-text-wrapper #body-copy{
-  width: 85%;
-  padding-left: 8%;
-}
-#am-text-wrapper p:first-of-type{
-  margin-top: 10px;
-}
-
-#am-text-wrapper p{
-  padding: 5px 0px 5px 0px;
-  margin: 0px;
-  text-align: center;
-}
-
-#info-box{
-    border: 1px dashed #a7a7a7;
-    margin-top: 15px;
-    padding: 0px 25px 13px;
-    background-color: #e2e2e2;
-  }
-
-/* About Me Media Queries */
-
-@media only screen and (max-width: 900px) {
-
-    #am-img-wrapper{
-      float: none;
-      width: 100%;
-    }
-
-    #am-text-wrapper {
-    width: 100%;
-   }
-
-   #am-text-wrapper p.quote {
-     padding-top: 0px;
-   }
-
-   #am-text-wrapper #body-copy {
-    width: 85%;
-    margin: auto;
-    padding-left: 0px;
-  }
-}
-
-@media only screen and (max-width: 510px) {
-
-  #am-text-wrapper #body-copy p.quote {
-    width: 95%;
-
-  }
-
-
-}
-
-@media only screen and (max-width: 350px) {
-
-  #title-banner {
-    width: 75%;
-  }
-
-}
-
-</style>
+  <link rel="stylesheet" href="css/main-css.min.css">
 </head>
 
 
 
 
-<body>
+<body id="about">
 
   <div id="main-menu" class="content-page">
 
