--- a/skateboarding.html
+++ b/skateboarding.html
@@ -3,308 +3,21 @@
 <html>
 
 <head>
-<title>Skateboarding - Rachael Sherlock</title>
-<meta name="description" content="Skateboarding projects and work within the sport">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta charset="UTF-8">
+  <title>Skateboarding - Rachael Sherlock</title>
 
-<link rel="stylesheet" href="menu-styling.css">
-<link rel="stylesheet" href="font-styling.css">
-<link rel="stylesheet" href="footer.css">
+  <meta name="description" content="Skateboarding projects and work within the sport">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
 
-<style>
+  <link rel="stylesheet" href="css/menu-styling.css">
+  <link rel="stylesheet" href="css/font-styling.css">
+  <link rel="stylesheet" href="css/footer.css">
 
-body{
-  margin: 0px;
-  background-color: #444444;
-}
+  <link rel="stylesheet" href="css/main-css.min.css">
 
-/* Body Slices */
-
-.slice {
-  width: 100%;
-  height: auto;
-}
-
-
-.content-holder{
-  margin: auto;
-  }
-
-/* Intro Paragraph */
-
- #intro-para {
-   background-color: #ffffff;
-   clear: both;
-   text-align: center;
-   padding-top: 20px;
-   margin-top: 18px;
-   padding-bottom: 14px;
- }
-
- #intro-para .content-holder{
-   width:51%;
- }
-
-#intro-para h2{
-  display: none;
-}
-/*-- Mobie Styling --*/
-
-@media only screen and (max-width: 1020px) {
-    #intro-para .content-holder {
-      width: 70%;
-  }
-
-  #intro-para h2{
-    display: block;
-  }
-
-}
-
-
-@media only screen and (max-width: 410px) {
-    #intro-para .content-holder {
-      width: 90%;
-  }
-}
-
-
-/* Info gallery Flexbox */
-
-#info-gallery{
-  background-color: #ffffff;
-  width: 100%;
-
-}
-
-#info-gallery .gallery-row{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 92%;
-  margin: auto;
-}
-
-.info-container {
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: 22%;
-  height: auto;
-  margin: 1%;
-}
-
-.info-container img{
-  width: 100%;
-  height: auto;
-}
-
-/* Info Gallery Styling */
-
-.gallery-row h2{
-  font-size: 20px;
-  margin-bottom: 8px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-}
-
-.gallery-row.row-two h2{
-  margin-top: 0px;
-}
-
-p.credit {
-    font-size: 14px;
-    font-weight: bold;
-    margin: 2px 0px 0px 1px;
-}
-
-p.info-copy {
-    margin-top: 10px;
-    margin-left: 2px;
-}
-
-/* Skateboarding Gallery Resizing */
-
-
-@media only screen and (max-width: 1005px) {
-    .gallery-row h2 {
-      font-size: 16px;
-  }
-}
-
-@media only screen and (max-width: 825px) {
-  .info-container {
-      flex-basis: 33%;
-      margin: 0.6% 3%;
-  }
-}
-
-@media only screen and (max-width: 445px) {
-  .info-container {
-      flex-basis: 33%;
-      margin: 1%;
-  }
-}
-
-@media only screen and (max-width: 395px) {
-  .info-container {
-      flex-basis: 55%;
-      margin: 1% 6%;
-  }
-}
-
-/* Video Slice */
-
-.video-slice{
-  width: 100%;
-  background-color: #f5f5f5;
-  padding-bottom: 30px;
-}
-
-.video-slice.vlogs{
-  background-color: #ffffff;
-  padding-bottom: 10px;
-}
-
-
-.video-slice h2{
-  margin: auto;
-  width: 738px;
-  text-align: left;
-  padding-top: 20px;
-  padding-bottom: 9px;
-  letter-spacing: 4px;
-  text-transform: uppercase;
-}
-
-.video-slice.vlogs h2{
-  text-align: center;
-}
-
-.video-slice h2:nth-of-type(2){
-      padding-top: 60px;
-}
-
-.video-slice p{
-  margin: auto;
-  width: 734px;
-  padding-top: 7px;
-}
-
-.video-slice.vlogs p{
-  text-align: center;
-}
-
-.video-slice #big-video{
-  width: 740px;
-  margin: auto;
-  display: block;
-}
-
-.video-slice #video-row{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 92%;
-  margin: auto;
-  margin-top: 15px;
-}
-
-#video-row .video-container{
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: 22%;
-  height: auto;
-  margin: 1%;
-}
-
-#video-row h3{
-  margin-bottom: 8px;
-}
-
-.video-container img{
-  width: 100%;
-  height: auto;
-}
-
-#video-row p.info-copy{
-  width: auto;
-  padding-top: 12px;
-}
-
-
-/* YouTube Videos Responsive */
-
-.YT-container {
-position: relative;
-padding-bottom: 48.25%;
-padding-top: 30px; height: 0; overflow: hidden;
-}
-
-.YT-container iframe,
-.YT-container object,
-.YT-container embed {
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-}
-
-
-
-/* Video Gallery Resizing */
-
-@media only screen and (max-width: 825px) {
-
-  .video-slice h2 {
-    text-align: center;
-    width: auto;
-  }
-
-  .video-slice #big-video{
-    width: 90%;
-  }
-
-  .video-slice p {
-     text-align: center;
-     margin: auto;
-     width: 74%;
-     padding-top: 7px;
- }
-
- .video-slice p br{
-   display: none;
- }
-  #video-row .video-container {
-      flex-basis: 52%;
-  }
-
-  .video-slice #video-row {
-      width: 63%;
-  }
-
-  #video-row p.info-copy{
-    padding-bottom: 25px;
-  }
-
-}
-
-@media only screen and (max-width: 400px) {
-  .video-slice #video-row {
-      width: 80%;
-  }
-}
-
-  @media only screen and (max-width: 350px) {
-    .info-container {
-        flex-basis: 49%;
-    }
-}
-
-</style>
 </head>
-<body>
+
+<body id="skateboarding">
 
 <div id="main-menu" class="content-page">
 
