April 2019: Homepage & About Page Ammends

--- a/about-me.html
+++ b/about-me.html
@@ -48,7 +48,7 @@
 <div id="am-content-wrapper">
 
   <div id="contact-wrapper">
-    <p>rachjohannalouise@gmail.com</p>
+    <p>rachaelsherlocktv@gmail.com</p>
     <a href="Rachael-Sherlock-CV.pdf">
       <p>DOWNLOAD CV</p>
     </a>
@@ -59,21 +59,12 @@
   </div>
 
   <div id="am-text-wrapper">
-    <p class="quote">Described by BAFTA winning Patrick Titley as 	&lsquo;cool&rsquo;. </p>
      <div id="body-copy">
-        <p id="first-para">Based in North London I have been working in television for 6 years on a range of different productions. My day to day work at ITV varies massively from assisting Sound, Lighting, Scenic and Camera departments. Ultimately my career ambitions would be to direct live events, and I’m passionate about working on independent freelance projects to develop my skills.</p>
+        <p id="first-para">Based in North London, I have been working professionally in television for 6 years across a range of productions. For the last 4 years, I've worked as a Senior Studio Technican at <a href="https://www.itv.com/">ITV</a> Daytime, on shows such as Good Morning Britain, Lorraine, This Morning and Loose Women. I left ITV in January 2019 to persue a freelance career as a Self Shooting PD, where I ultimately would like to end up directing live events such as music or sports.</p>
 
-        <p>I first got into film when I joined a club at my local youth centre, attending workshops and gaining a place with TVYP at Bristol Endemol Studios. During my University years I created <a href="https://ystv.co.uk/watch/thesoundlab/">The Sound Lab</a> for YSTV and was part of the winning team that won Best Broadcaster at the National Student Television Awards 2012.</p>
+        <p>I am passionate about working on independent freelance projects to develop my skills. I can hire in any equipment needed but I also have my own kit allowing me to be self-sufficient. Currently, I am shooting on a Sony A7 iii, with a range of Zeiss lenses, a Mavic Air Drone, the latest Zhiyun Crane 3 LAB stabiliser, a GoPro Hero 7 and a radio mic kit to ensure the highest possible production values for sound when working with smaller budgets.</p>
 
-        <p class="quote">During the London 2012 Paralympic Games, I worked with for <a href="https://www.doneanddusted.com/">Done & Dusted</a> at the opening and closing ceremonies.</p>
-
-        <p>I joined Roll to Record at Elstree Studios and did my training to become a grade 5 operator for Big Brother, whilst at the same time freelancing in the ITV Breakfast Green Room. I then moved across to ITV completely to become a Studio Technician and have stayed with them throughout several changes, where I am now a Senior Studio Technician helping to oversee a team of multiskilled assistants. </p>
-
-          <div id="info-box">
-            <p>For small projects and freelance work I have my own audio visual equipment allowing me to be self-sufficient. I use a zoom H4n recorder with a radio mic to ensure the highest possible sound production values when working on smaller productions instead of relying on internal camera mics or small shotgun style mics.</p>
-
-            <p>I pride myself on having great interpersonal skills, useful for conducting interviews and dealing with a range of talent. I’m able to adapt daily depending on my role and team, and can also be a trusted self-shooter.</p>
-          </div>
+        <p>I pride myself on having great interpersonal skills, useful for conducting interviews and dealing with a range of talent. I am able to adapt daily depending on my role and team, and can also be a trusted self-shooter.</p>
 
       </div>
   </div>
