--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div id="hero-intro-paragraph">
     <h1 id="top-name">Rachael</h1>
     <h1>Sherlock</h1>
-    <p>Senior Studio Technician & Film Maker</p>
+    <p>Self Shooting Producer/Director</p>
   </div>
 
 </div>
@@ -61,7 +61,7 @@
   <div class="content-holder">
     <h2>Hi, I&#8242;m Rachael.</h2>
     <p id="slice-one-text">
-      I'm a film maker and fully qualified Senior Studio Technican at ITV.<br> I love to totally immerse myself in new and exciting projects, finding a healthy balance between producing my own independent content and working with other creatives and directors. In the future I hope to direct live events, sports and musical productions.</p>
+      I'm a film maker and fully qualified Senior Studio Technican.<br> I love to totally immerse myself in new and exciting projects, finding a healthy balance between producing my own independent content and working with other creatives and directors. In the future I hope to direct live events, sports and musical productions.</p>
     <a href="film-tv_v5.html"><div id="cta">VIEW PORTFOLIO</div></a>
 
   </div>
