about me changes and bug fixes

--- a/film-tv.html
+++ b/film-tv.html
@@ -159,7 +159,7 @@
 		   <h2>This Morning ITV</h2>
 		   <p>Camera Ped Operator for Hairy Bikers cooking item</p>
 		   <a href="https://www.itv.com/thismorning/food/lamb-and-lentil-meatballs-the-hairy-bikers-recipe">
-			 <span class="cta">VIEW VIDEO</span>
+			 <span class="cta">VISIT SITE</span>
 		   </a>
 		 </div>
      </div>
