--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <h2>Hi, I&#8242;m Rachael.</h2>
     <p id="slice-one-text">
       I'm a film maker and fully qualified Senior Studio Technican.<br> I love to totally immerse myself in new and exciting projects, finding a healthy balance between producing my own independent content and working with other creatives and directors. In the future I hope to direct live events, sports and musical productions.</p>
-    <a href="film-tv_v5.html"><div id="cta">VIEW PORTFOLIO</div></a>
+    <a href="film-tv.html"><div id="cta">VIEW PORTFOLIO</div></a>
 
   </div>
 </div>
