--- a/about-me.html
+++ b/about-me.html
@@ -62,7 +62,9 @@
      <div id="body-copy">
         <p id="first-para">Based in North London, I have been working professionally in television for 6 years across a range of productions. For the last 4 years, I've worked as a Senior Studio Technican at <a href="https://www.itv.com/">ITV</a> Daytime, on shows such as Good Morning Britain, Lorraine, This Morning and Loose Women. I left ITV in January 2019 to persue a freelance career as a Self Shooting PD, where I ultimately would like to end up directing live events such as music or sports.</p>
 
-        <p>I am passionate about working on independent freelance projects to develop my skills. I can hire in any equipment needed but I also have my own kit allowing me to be self-sufficient. Currently, I am shooting on a Sony A7 iii, with a range of Zeiss lenses, a Mavic Air Drone, the latest Zhiyun Crane 3 LAB stabiliser, a GoPro Hero 7 and a radio mic kit to ensure the highest possible production values for sound when working with smaller budgets.</p>
+        <p>I am passionate about working on independent freelance projects to develop my skills. I can hire in any equipment needed but I also have my own kit allowing me to be self-sufficient.</p>
+
+       <p> Currently, I am shooting on a <b>Sony A7 iii</b>, with a range of <b>Zeiss</b> lenses, a broadcast quality <b>Sony Z90</b> (with a wide lens adapter if needed), a <b>Mavic Air Drone</b>, the latest <b>Zhiyun Crane 3 LAB stabiliser</b>, a <b>GoPro Hero 7</b> and a <b>Sennheiser</b> radio mic kit to ensure the highest possible production values for sound when working with smaller budgets.</p>
 
         <p>I pride myself on having great interpersonal skills, useful for conducting interviews and dealing with a range of talent. I am able to adapt daily depending on my role and team, and can also be a trusted self-shooter.</p>
 
