--- a/about-me.html
+++ b/about-me.html
@@ -55,12 +55,12 @@
   </div>
 
   <div id="am-img-wrapper">
-    <img src="images/about-me/about-me-prof-pic-2.jpg">
+    <img src="images/about-me-pic.jpg" alt="Rachael Sherlock">
   </div>
 
   <div id="am-text-wrapper">
      <div id="body-copy">
-        <p id="first-para">Based in North London, I have been working professionally in television for 6 years across a range of productions. For the last 4 years, I've worked as a Senior Studio Technican at <a href="https://www.itv.com/">ITV</a> Daytime, on shows such as Good Morning Britain, Lorraine, This Morning and Loose Women. I left ITV in January 2019 to persue a freelance career as a Self Shooting PD, where I ultimately would like to end up directing live events such as music or sports.</p>
+        <p id="first-para">Based in North London, I have been working professionally in television for 6 years across a range of productions. I've worked as a Senior Studio Technician at <a href="https://www.itv.com/">ITV Daytime</a>, on shows such as Good Morning Britain, Lorraine, This Morning and Loose Women. I left ITV in January 2019 to persue a freelance career as a Self Shooting PD, with a focus on live events and creating female driven media for sports.</p>
 
         <p>I am passionate about working on independent freelance projects to develop my skills. I can hire in any equipment needed but I also have my own kit allowing me to be self-sufficient.</p>
 
