--- a/film-tv.html
+++ b/film-tv.html
@@ -65,34 +65,34 @@
 
  <!-- Row 1 -->
     <div class="image-holder">
-     <img src="images/film-tv/1-Urban-Hippie-Collective.jpeg">
+     <img src="images/Backpacker-bus.jpg">
      <div class="text-card">
        <div class="text-card-background"></div>
 		 <div class="card-content">
-		   <h2>Urban Hippie Collective</h2>
-		   <p>Self shot and edited vlog for Youtube and social media platforms</p>
+		   <h2>Full English Backpacker Bus</h2>
+		   <p>Producer/Director</p>
 		 </div>
      </div>
     </div>
 
     <div class="image-holder">
-     <img src="images/film-tv/3-Design-Workshop.jpeg">
+     <img src="images/Collectives.jpg">
      <div class="text-card">
        <div class="text-card-background"></div>
 		<div class="card-content">
-		   <h2>Nike SB x Board of This</h2>
-		   <p>Booked as the film maker to cover the night and deliver an Instagram highlights video for social media.</p>
+		   <h2>Collectives</h2>
+		   <p>Producer/Director for a 6 part mini docu series for Skatiesm funded by Nike SB.</p>
 		</div>
      </div>
     </div>
 
     <div class="image-holder">
-     <img src="images/film-tv/6-Lorraine-Show.jpeg">
+     <img src="images/Gizmo-Premiere.jpg">
      <div class="text-card">
        <div class="text-card-background"></div>
 	   <div class="card-content">
-		   <h2>Lorraine Show ITV</h2>
-		   <p>Senior Studio Technician at ITV Daytime</p>
+		   <h2>Gizmo Nike SB</h2>
+		   <p>Videographer/Photographer for the Gizmo London Film Premiere.</p>
 	   </div>
       </div>
     </div>
@@ -125,18 +125,15 @@
     </div>
 
     <div class="image-holder">
-     <img src="images/film-tv/23-The-Painter.jpeg">
-     <div class="text-card">
-       <div class="text-card-background"></div>
-	   <div class="card-content">
-		   <h2>The Painter and The Thief</h2>
-		   <p>Line Producer/1st AD Award winning Short Film with £10,000 budget</p>
-		   <div class="vcta" data-row="2" data-video-title="thePainterAndTheThief">
-			 <span class="cta">VIEW VIDEO</span>
-		    </div>
-       </div>
+      <img src="images/Trussles.jpg">
+      <div class="text-card">
+        <div class="text-card-background"></div>
+      <div class="card-content">
+        <h2>Trussle Mortgages</h2>
+        <p>Videographer for their corporate event at the Houses of Parliament</p>
+      </div>
+      </div>
      </div>
-    </div>
 
 
 <!-- Row 3 -->
@@ -166,12 +163,12 @@
     </div>
 
     <div class="image-holder">
-     <img src="images/film-tv/9-Super-Birds-Gig.jpeg">
+     <img src="images/The-Rock-Project.jpg">
      <div class="text-card">
        <div class="text-card-background"></div>
 	   <div class="card-content">
-		   <h2>Super Birds</h2>
-		   <p>Photographer and Filmer / Live Music Shoot</p>
+		   <h2>The Rock Project</h2>
+		   <p>Videographer/Editor for several online promos</p>
 		</div>
      </div>
     </div>
@@ -241,15 +238,18 @@
     </div>
 
     <div class="image-holder">
-     <img src="images/film-tv/15-Camp-VC.jpeg">
-     <div class="text-card">
-       <div class="text-card-background"></div>
-	   <div class="card-content">
-		   <h2>Camp VC</h2>
-		   <p>Instagram Highlights Videographer and Skateboard Instructor for the Vans mini ramp</p>
-		</div>
+      <img src="images/film-tv/23-The-Painter.jpeg">
+      <div class="text-card">
+        <div class="text-card-background"></div>
+      <div class="card-content">
+        <h2>The Painter and The Thief</h2>
+        <p>Line Producer/1st AD Award winning Short Film with £10,000 budget</p>
+        <div class="vcta" data-row="2" data-video-title="thePainterAndTheThief">
+        <span class="cta">VIEW VIDEO</span>
+         </div>
+        </div>
+      </div>
      </div>
-    </div>
 
     <!-- Row 6-->
       <div class="image-holder">
@@ -287,12 +287,12 @@
 
       <!-- Row 7-->
         <div class="image-holder">
-         <img src="images/film-tv/19-Camp-Rubicon.jpeg">
+         <img src="images/Big-Brother.jpg">
          <div class="text-card">
            <div class="text-card-background"></div>
 		   <div class="card-content">
-			   <h2>Camp Rubicon</h2>
-			   <p>Videographer for Promotional Video</p>
+			   <h2>Big Brother</h2>
+			   <p>Grade 5 Camera Operator for the Channel 5 series </p>
 			</div>
          </div>
         </div>
