--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div class="content-holder">
     <h2>Hi, I&#8242;m Rachael.</h2>
     <p id="slice-one-text">
-      I'm a film maker and fully qualified Senior Studio Technican.<br> I love to totally immerse myself in new and exciting projects, finding a healthy balance between producing my own independent content and working with other creatives and directors. In the future I hope to direct live events, sports and musical productions.</p>
+      I'm a self-shooting videographer and fully qualified Studio Technician for Broadcast. When I'm not freelancing in a live studio environment, I get my buzz from shooting live events, sporting competitions and mini documentaries. </p>
     <a href="film-tv.html"><div id="cta">VIEW PORTFOLIO</div></a>
 
   </div>
